# asl-interpreter

./: .clang-format  .gitignore  .gitmodules  CHANGES.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  asli.opam  dune-project  mk_install.py  prelude.asl  requirements.txt
.github/: dependabot.yml
.github/workflows/: AV_Scan_McAfee_Checker.yml  pull-request.yml  scorecard.yml
demo/: .gitignore  Makefile  assembly.s  config.json  demo.asl  exports.json  simulator.c  test.S  test.prj
editors/: asl.xml
libASL/: asl.ott  asl_ast.ml  asl_fmt.ml  asl_fmt.mli  asl_parser.messages  asl_parser.mly  asl_utils.ml  asl_utils.mli  asl_visitor.ml  asl_visitor.mli  backend_c.ml  backend_c_new.ml  backend_c_new.mli  backend_cpp.ml  backend_mlir.ml  backend_mlir.mli  bin_file.ml  bin_file.mli  builtin_idents.ml  builtin_idents.mli  check_monomorphization.ml  commands.ml  commands.mli  configuration.ml  configuration.mli  cpu.ml  cpu.mli  dune  elf.ml  elf.mli  error.ml  error.mli  eval.ml  eval.mli  flags.ml  flags.mli  format_utils.ml  format_utils.mli  global_checks.ml  global_checks.mli  (+66 more)
runtime/: Makefile  dune
runtime/include/asl/: bits1024.h  bits128.h  bits256.h  bits512.h  bits64.h  bits_template.h  error.h  integer.h  print.h  print_template.h  ram.h  runtime.h  runtime.hpp  set_slice_template.h  track_valid.h
runtime/lib/: bits1024.c  bits128.c  bits256.c  bits512.c  bits64.c  bits_template_c.h  end_of_execution.c  error.c  ram.c  set_slice_template_c.h  sign_extend_bits_template_c.h
runtime/test/: .gitignore  Makefile  bitint_maxwidth.c  bits_test.cc  bits_test_template.h  integer_test.cc  ram_test.cc  sign_extend_bits_test_template.h
share/: env.csh  env.sh
tests/: asl_test.ml  asl_utils_test.ml  backend_c_c23_test.ml  backend_c_fallback_test.ml  backend_c_orig_test.ml  dune  lit.cfg  loadasl_test.ml  test_cases_backend.ml  test_utils.ml  test_utils_backend.ml  xform_bitslices_test.ml  xform_bittuples_test.ml  xform_case_test.ml  xform_constprop_test.ml  xform_getset_test.ml  xform_int_bitslices_test.ml  xform_lower_test.ml  xform_mono_test.ml  xform_named_type_test.ml  xform_simplify_expr_test.ml  xform_tuples_test.ml  xform_valid_test.ml  xform_wrap_test.ml
tests/backends/: asl_end_execution_00.asl  asl_end_execution_01.asl  bits_add_00.asl  bits_and_00.asl  bits_append_00.asl  bits_asr_00.asl  bits_cvt_sint_00.asl  bits_cvt_ssintN_00.asl  bits_cvt_uint_00.asl  bits_cvt_usintN_00.asl  bits_eq_00.asl  bits_get_slice_00.asl  bits_get_slice_01.asl  bits_get_slice_02.asl  bits_lsl_00.asl  bits_lsr_00.asl  bits_mk_mask_00.asl  bits_mul_00.asl  bits_ne_00.asl  bits_not_00.asl  bits_ones_00.asl  bits_or_00.asl  bits_print_hex.asl  bits_print_hex_00.asl  bits_print_hex_01.asl  bits_replicate_00.asl  bits_set_slice_00.asl  bits_set_slice_01.asl  bits_set_slice_02.asl  bits_set_slice_03.asl  bits_sext_00.asl  bits_sext_01.asl  bits_sub_00.asl  bits_sub_01.asl  bits_xor_00.asl  bits_zeros_00.asl  bits_zext_00.asl  bool_and_00.asl  bool_eq_00.asl  bool_ne_00.asl  (+130 more)
tests/lit/: lit.cfg
tests/lit/check_monomorphization/: asli.prj  config.json  test_00.asl
tests/lit/eval/: slice_00.asl  slice_01.asl
tests/lit/globalchecks/: eval_order_00.asl  eval_order_01.asl  eval_order_02.asl  eval_order_03.asl  eval_order_04.asl  eval_order_05.asl  eval_order_06.asl  markers_00.asl  markers_01.asl  noreturn_00.asl  rethrow_00.asl  rethrow_01.asl  rethrow_02.asl  rethrow_03.asl  rethrow_04.asl
tests/lit/monomorphize/: recurse_00.asl
tests/lit/parser/: directive_line.asl  fenced_code_block.asl
tests/lit/print/: print_00.asl
tests/lit/runtime_checks/: array_read_00.asl  array_write_00.asl  bits_read_00.asl  bits_write_00.asl  conversion_00.asl  expr_with_00.asl  int_divide_00.asl
tests/lit/tcheck/: array_param_00.asl  conflicting_00.asl  conflicting_01.asl  funcall00.asl  funcall01.asl  funcall02.asl  funcall03.asl  funcall04.asl  funcall05.asl  funcall06.asl  funcall07.asl  funcall08.asl  funcall09.asl  function_arg_00.asl  immutable_00.asl  immutable_01.asl  immutable_02.asl  immutable_03.asl  immutable_04.asl  immutable_05.asl  immutable_06.asl  immutable_07.asl  immutable_08.asl  implicit_params_00.asl  implicit_params_01.asl  missing_00.asl  patterns_00.asl  record_init_00.asl  record_init_01.asl  record_init_02.asl  records_00.asl  records_01.asl  records_02.asl  return_type_01.asl  setter_00.asl  setter_01.asl  shadowing_00.asl  shadowing_01.asl  shadowing_02.asl  shadowing_03.asl  (+6 more)
tests/lit/xform_bounded/: decl_fun_00.asl  expr_add_00.asl  expr_eq_00.asl  expr_ge_00.asl  expr_gt_00.asl  expr_if_00.asl  expr_if_01.asl  expr_le_00.asl  expr_lt_00.asl  expr_mul_00.asl  expr_ne_00.asl  expr_neg_00.asl  expr_sint_00.asl  expr_sub_00.asl  expr_uint_00.asl  stmt_for_00.asl  stmt_let_00.asl
tests/lit/xform_hoist_lets/: test_00.asl  test_01.asl  test_02.asl  test_03.asl
tests/scripts/: not
