; Copyright Arm Limited (c) 2017-2019
; Copyright (C) 2022-2025 Intel Corporation
; SPDX-Licence-Identifier: BSD-3-Clause

(ocamllex lexer)

(menhir
 (modules asl_parser)
 (flags --table))

(rule
 (targets asl_parser_messages.ml)
 (deps asl_parser.messages asl_parser.mly)
 (action (with-stdout-to %{targets} (run menhir --compile-errors %{deps}))))

(library
 (name libASL)
 (public_name asli.libASL)
 (flags
  (:standard -w -27 -cclib -lstdc++))
 (modules
   asl_ast
   asl_fmt
   asl_parser
   asl_parser_messages
   asl_utils
   asl_visitor
   backend_c
   backend_mlir
   bin_file
   builtin_idents
   commands
   configuration
   cpu
   elf
   error
   eval
   flags
   format_utils
   global_checks
   ident
   identset
   lattice
   lexer
   lexersupport
   loadASL
   loc
   metadata
   primops
   runtime
   runtime_c23
   runtime_ac
   runtime_fallback
   runtime_sc
   scope
   scopeStack
   tcheck
   utils
   value
   visitor
   check_monomorphization
   xform_bitslices
   xform_bittuples
   xform_bounded
   xform_case
   xform_constprop
   xform_desugar
   xform_getset
   xform_hoist_lets
   xform_int_bitslices
   xform_lower
   xform_mono
   xform_named_type
   xform_simplify_expr
   xform_tuples
   xform_valid
   xform_wrap)
 (libraries menhirLib ocolor str yojson zarith z3))


(env (_ (odoc (warnings fatal))))
